--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,14 @@ body {
 	text-transform: uppercase;
 }
 
-<<<<<<< HEAD
-=======
+
 p  {
 	font-size: 14px;
 }
 a {
 	text-decoration: none;
 }
->>>>>>> 1c3ee4b67f9f9b0317240bd02dcd4817dca3d36e
+
 
 
 .main-header {
@@ -25,12 +24,9 @@ a {
 .site-navigation {
 	width: 1200px;
 	display: block;
-<<<<<<< HEAD
 	top: 10px;
-=======
 	position: absolute;
 	top: 0px;
->>>>>>> 1c3ee4b67f9f9b0317240bd02dcd4817dca3d36e
 }
 
 .menu-item  {
@@ -122,9 +118,12 @@ a {
 	background-color: #766357;
 	font-size: 21px;
 	text-align: center;
+	text-transform: uppercase;
 	padding-top: 36px;
 	padding-bottom: 36px;
-	margin-bottom: 54px;
+	margin-bottom: 100px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .form-title:hover,
@@ -240,8 +239,7 @@ a {
 	
 }
 .social-button:active  {
-	background-color: #5596BE;
-		
+	background-color: #5596BE;	
 }
 
 
