--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ a {
 .main-header {
 	position: relative;
 	background-color: #FFFFFF;
-	height: 57px;
 }
 .site-navigation {
 }
@@ -80,15 +79,10 @@ a {
 
 .logo-link {
 	text-decoration: none;
-}
-.logo{
 	position: absolute;
 	top: 0px;
 	left: 50%;
 	transform: translateX(-50%);
-	z-index: 2;
-	margin-right: auto;
-	margin-left: auto;
 }
 
 .main-banner {
@@ -170,13 +164,8 @@ a {
 }
 
 .register-form-field {
-	font-size: 14px;
 	font-weight: bold;	
-	text-align: justify;
-	margin-right: auto;
-	margin-left: auto;
 	padding-bottom: 40px;
-	min-width: 458px;
 }
 
 
@@ -317,8 +306,6 @@ a {
 	color: #94B9D3;
 }
 .main-footer  {
-	clear: both;
-	height: 120px;
 	background-color: #FFFFFF;
 	text-align: center;
 	display: flex;
@@ -327,8 +314,8 @@ a {
 	justify-content: space-between;
 	align-items: center;
 	align-content: center;
-	
-	
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 .hashtag  {
@@ -393,18 +380,17 @@ a {
 	font-size: 14px;
 }
 .developer-text {
-	height: 43px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 .developer-text span{
-	display: inline-block;
-	margin: 0;
-	padding: 0;
-	vertical-align: top;
 	margin-right: 6px;
-	padding-top: 15px;
+	padding: 0;
+
 }
 .academy-logo {
-	display: inline-block;
 	text-decoration: none;
 	color: #000000;	
 }
@@ -431,8 +417,10 @@ a {
 }
 
 .hotel-item  {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
 	list-style-type: none;
-	height: 90px;
 	border-bottom: 	1px solid #E5E5E5;
 	padding-top: 30px;
 	padding-bottom: 30px;
@@ -442,7 +430,6 @@ a {
 
 
 .hotel-img  {
-	float: left;
 	padding-right: 30px;
 }
 .hotel-item  h2{
@@ -537,8 +524,7 @@ a {
 	color: #918A84;
 }
 .rating {
-	display: inline-block;
-	float: right;
+	margin-left: auto;
 
 }
 .rating-info {
