--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ a {
 	display: flex;	
 	flex-direction: row;
 	flex-wrap: nowrap;
-	justify-content: space-between;
+	justify-content: stretch;
 	align-items: center;
 	height: 57px;
 	padding-left: 71px;
@@ -50,15 +50,15 @@ a {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 14px;
-	width: 22.7272727273%;
-border: 1px black solid;
+	width: 240px;
 }
 
 .right-side {
 	text-align: right;
+	margin-left: auto;
 }
 .right-side:last-child{
-	text-align: right;
+	margin-left: 0;
 
 }
 
@@ -345,7 +345,6 @@ border: 1px black solid;
 	align-content: center;
 	padding-top: 36px;
 	padding-bottom: 36px;
-	border: 1px black solid;
 }
 
 .hashtag  {
@@ -468,6 +467,8 @@ border: 1px black solid;
 
 
 .hotel-img  {
+	margin: 0;
+	padding: 0;
 	padding-right: 30px;
 }
 .hotel-item  h2{
@@ -475,8 +476,8 @@ border: 1px black solid;
 	padding: 0;
 	font-size: 21px;
 	font-weight: bold;
-	line-height: 17px;
-	margin-bottom: 15px;
+	line-height: 18px;
+	margin-bottom: 14px;
 }
 .hotel-name {
 	text-decoration: none;
@@ -491,44 +492,53 @@ border: 1px black solid;
 	color: #cacaca;
 }
 .hotel-text {
-	display: inline-block;
 	
 }
 .hotel-info{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	flex-wrap: nowrap;
+	align-items: center;
 	margin: 0;
 	padding: 0;
-	margin-bottom: 15px;
+	margin-bottom: 22px;
 	font-size: 14px;
 }	
 .hotel-type {
-	display: inline-block;
 	min-width: 110px;
 	padding: 0;	
 }
 
 .hotel-price{
-	display: inline-block;
 	padding: 0;
-	margin-left: 6px;
+	padding-left: 6px;
 	
 }
 
 .hotel-buttons {
+	flex-direction: row;
+	justify-content: flex-start;
+	flex-wrap: nowrap;
+	align-items: center;
 	font-size: 14px;
 	font-weight: bold;
-	line-height: 11px;
 }
 
 .button-info {
-	display: inline-block;
+	margin: 0;
+	padding: 0;
 	background-color: #80B3D2;
 	border: none;
-	padding-top: 8px;
-	padding-bottom: 8px;
-	padding-right: 17px;
-	padding-left: 17px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-right: 16px;
+	padding-left: 16px;
 	text-align: center;
     color: #FFFFFF;
+	box-sizing: border-box;
+	min-width: 110px;
+	margin-right: 4px;
 }
 .button-info:hover,
 .button-info:focus{
@@ -541,13 +551,12 @@ border: 1px black solid;
 .button-booking	{
 	margin: 0;
 	padding: 0;
-	display: inline-block;
 	background-color: #766357;
 	border: none;
-	padding-top: 8px;
-	padding-bottom: 8px;
-	padding-right: 17px;
-	padding-left: 17px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-right: 16px;
+	padding-left: 16px;
 	text-align: center;
     color: #FFFFFF;
 }
@@ -562,6 +571,7 @@ border: 1px black solid;
 }
 .rating {
 	margin-left: auto;
+	text-align: right;
 
 }
 .rating-info {
@@ -569,13 +579,17 @@ border: 1px black solid;
 	line-height: 10px;
 	background-color: #F2F2F2;
 	text-align: center;
-	padding: 8px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-right: 13px;
+	padding-left: 13px;
+	
 }
 .stars {
 	margin: 0;
 	padding: 0;
 	line-height: 17px;
-	margin-bottom: 46px;
+	margin-bottom: 44px;
 }
 .stars ul{
 	margin: 0;
@@ -584,6 +598,7 @@ border: 1px black solid;
 .one-star-icon{
 	list-style: none;
 	display: inline-block;
+	padding-left: 2px;
 	width: 17px;
 	height: 17px;
 	background: url(../img/star.svg) no-repeat center;
